# FlowScroll

./: .gitignore  CHANGELOG.md  README.en.md  README.md  main.py  pyproject.toml  sync_version.py
.github/workflows/: ci.yml  release.yml
FlowScroll/: __init__.py  constants.py  i18n.py
FlowScroll-homepage/: README_DEPLOY.md  app.js  config.js  en.html  generate_sitemap.py  index.html  robots.txt  seo.js  styles.css
FlowScroll/core/: config.py  engine.py  filter_validation.py  hotkeys.py  rules.py  scroller.py  state.py
FlowScroll/input/: listeners.py
FlowScroll/locales/: en-US.json  zh-CN.json
FlowScroll/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
FlowScroll/services/: autostart.py  credential_service.py  diagnostics.py  logging_service.py  single_instance.py  update_checker.py  window_monitor.py
FlowScroll/ui/: components.py  dialogs.py  helpers.py  overlay.py  preset_manager.py  settings_window.py  styles.py  tabs_builder.py  tray_manager.py  utils.py  webdav_dialog.py
scripts/: publish_gitee.py
tests/: test_i18n.py  test_regex_filter.py  test_smoke.py
